--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@types/react-transition-group": "^4.4.6",
+    "@vercel/analytics": "^1.5.0",
     "aos": "^2.3.4",
     "eslint-config-next": "^14.1.0",
     "formik": "^2.4.5",
