--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 # For SEO related content
-NEXT_PUBLIC_SITE_NAME=''
+NEXT_PUBLIC_SITE_NAME='INVIRTU - Intégrateur de solutions IT - Toulouse'
 
 # Contact us form submission
-CONTACT_MAIL_ADDRESS=""
-CONTACT_MAIL_PASSWORD=""
+CONTACT_MAIL_ADDRESS="contact.invirtu@gmail.com"
+CONTACT_MAIL_PASSWORD="gwrv anpk wcoq leiv"
