--- a/.env.sample
+++ b/.env.sample
@@ -2,5 +2,5 @@
 NEXT_PUBLIC_SITE_NAME='INVIRTU - Intégrateur de solutions IT - Toulouse'
 
 # Contact us form submission
-CONTACT_MAIL_ADDRESS="contact.invirtu@gmail.com"
-CONTACT_MAIL_PASSWORD="gwrv anpk wcoq leiv"
+CONTACT_MAIL_ADDRESS=contact.invirtu@gmail.com
+CONTACT_MAIL_PASSWORD=gwrvanpkwcoqleiv
