fix: configure form section

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,4 @@ NEXT_PUBLIC_SITE_NAME='INVIRTU - Intégrateur de solutions IT - Toulouse'
 # Contact us form submission
 CONTACT_MAIL_ADDRESS=contact.invirtu@gmail.com
 CONTACT_MAIL_PASSWORD=gwrvanpkwcoqleiv
+CONTACT_TO_ADDRESS=contact@invirtu.fr
